Second section content added not yet formatted

--- a/index.html
+++ b/index.html
@@ -18,8 +18,33 @@
             </div>
         </header>
         <header>
-            <div class="awesome">This website is awesome</div>
-            <div> This is a placeholder for an Image</div>
+            <div class="hero">
+                <div class="awesome">This website is awesome</div>
+                <div class="secondary"> This website has some subtext that goes here under the main title. It's a smallerfont and the color is lower contrast </div>
+                <button class="btop">Sign up</button>
+            </div>
+            <div class="placeholder-image"> This is a placeholder for an Image</div>
         </header>
+        <div class="second-part">
+            <div class="second-title">Some Random Information</div>>
+            <div class="img-line">
+                <div class="information">
+                    <img src="https://htmlcolorcodes.com/assets/images/colors/white-color-solid-background-1920x1080.png" alt="Some white color">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="information">
+                    <img src="https://htmlcolorcodes.com/assets/images/colors/white-color-solid-background-1920x1080.png" alt="Some white color">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="information">
+                    <img src="https://htmlcolorcodes.com/assets/images/colors/white-color-solid-background-1920x1080.png" alt="Some white color">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="information">
+                    <img src="https://htmlcolorcodes.com/assets/images/colors/white-color-solid-background-1920x1080.png" alt="Some white color">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
