--- a/index.html
+++ b/index.html
@@ -46,5 +46,17 @@
                 </div>
             </div>
         </div>
+        <div class="review">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, Who knows? All I know is that it looks nice.</div>
+            <div class="customer">-Thor, God of Thunder</div>        
+        </div>
+        <div class="action">
+            <div class="action-left">
+                <div class="action-call">Call to action! It's time!</div>
+                <div class="action-text">Sign up for our product by clicking that button right over there</div>
+            </div>
+            <div class="action-right"><button>Sign up</button></div>
+        </div>
+        <footer>Copyright &copy; The Odin Project 2021 </footer>
     </body>
 </html>
